--- a/docs/chlorophyll_exploration.Rmd
+++ b/docs/chlorophyll_exploration.Rmd
@@ -35,7 +35,21 @@ toolik_chlorophyll <- toolik_chlorophyll %>% clean_names()
 names(toolik_chlorophyll)
 ```
 
+Create a scatterplot of depth versus chlorophyll A concentration 
+-make point size `size` changed based on the concentration
+-make all points "cyan4"
+-update theme to `theme_dark()`
+```{r}
+chlorophyll_plot <- ggplot(data = toolik_chlorophyll, aes(x = active_chl_a_ug_l, y = depth)) +
+  geom_point(aes(size = active_chl_a_ug_l), 
+             color = "cyan", alpha = .5) +
+  theme_dark() + scale_y_reverse()
+
+chlorophyll_plot
+```
 
 
-
+```{r}
+ggsave(here::here("figs", "chlorophyll_graphs.jpg"), plot = chlorophyll_plot)
+```
 
